Use deprecated Constructor.
How are you dealing with deprecated codes in snippets ?
```
@Deprecated(since="9")
public Integer​(int value)
```